--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,6 +1,12 @@
 {
   "routes": [
     {
+      "route": "/index.html",
+      "headers": {
+        "mitch-header": "1234"
+      }
+    },
+    {
       "route": "/profile.html",
       "allowedRoles": ["authenticated"]
     }
